<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/institute" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/raj_kumar_goel_institute_of_technology"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/mark_attendance"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/mark_attendance" />

            <TextView
                android:id="@+id/subscriptionText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/mark_attendance"
                android:textColor="#000000"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_arrow" />
            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1e000000" />

        <LinearLayout
            android:id="@+id/employee_chat"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/chat_icon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/employee_chat_room"
                android:textColor="#000000"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_arrow" />
            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1e000000" />

        <LinearLayout
            android:id="@+id/view_attendance"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/view_attendance" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/view_your_attendance"
                android:textColor="#000000"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_arrow" />
            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1e000000" />

        <LinearLayout
            android:id="@+id/monthly_analysis"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/month_icon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="Monthly Attendance"
                android:textColor="#000000"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_arrow" />
            </LinearLayout>


        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1e000000" />

    </LinearLayout>
</ScrollView>